--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    border: 2px dodgerblue dashed;
+    /* border: 2px dodgerblue dashed; */
     margin: 5%;
     flex-direction: row;
     padding-bottom: 10px;
@@ -28,7 +28,7 @@ h1, h2 {
     border-radius: 8px;
     box-shadow: 0px 2px 5px black;
     background-color: white;
-    width: 30%;
+    width: 25%;
     min-width: 175px;
     max-width: 500px;
     /* height: 20%; /* causes the cards to be even */
